// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toucan captureException 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "colno": 0,
              "filename": "file",
              "function": "foo",
              "lineno": 0,
            },
            Object {
              "colno": 0,
              "filename": "file",
              "function": "bar",
              "lineno": 0,
            },
          ],
        },
        "type": "Error",
        "value": "test",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureException 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan captureMessage 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureMessage 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan setRequestBody 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "data": Object {
      "bar": "baz",
      "foo": "bar",
    },
    "method": "POST",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan setTag 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "tags": Object {
    "foo": "bar",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan setTags 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "tags": Object {
    "bar": "baz",
    "foo": "bar",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan setUser 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
  "user": Object {
    "email": "test@gmail.com",
    "id": "testid",
  },
}
`;
